<resources>
    <string name="app_name">Jokenpo</string>
    <string name="gun_selection">\nSeleção de Arma.</string>
    <string name="winner">Vencedor da Batalha: </string>
    <string name="draw">Empate, rodada desconsiderada.</string>
    <string name="won_the_match"> venceu o confronto.</string>
    <string name="choose_gun"> deve escolher uma arma.</string>
    <string name="choose_gun_player">, selecione qual a arma que utilizará no confronto:</string>
    <string name="rock">Pedra</string>
    <string name="paper">Papel</string>
    <string name="scissors">Tesoura</string>
    <string name="fight">LUTAR</string>
    <string name="close">Fechar</string>
    <string name="scoreboard">Placar</string>
    <string name="name_of_player">Nome do competidor</string>
    <string name="kind_of_game">Tipo de jogo</string>
    <string name="start_game">Iniciar jogo</string>
</resources>