<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".view.WarActivity">

    <Button
        android:id="@+id/button_weapon1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        app:layout_constraintBottom_toTopOf="@+id/button_weapon2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_weapon2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        app:layout_constraintBottom_toTopOf="@+id/button_fight"
        app:layout_constraintEnd_toEndOf="@+id/button_weapon1"
        app:layout_constraintStart_toStartOf="@+id/button_weapon1"
        app:layout_constraintTop_toBottomOf="@+id/button_weapon1" />

    <Button
        android:id="@+id/button_fight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fight"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button_weapon1"
        app:layout_constraintStart_toStartOf="@+id/button_weapon1"
        app:layout_constraintTop_toBottomOf="@+id/button_weapon2" />

    <TextView
        android:id="@+id/textview_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/close"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/label_scoreboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scoreboard"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_player1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/label_player2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_scoreboard" />

    <TextView
        android:id="@+id/label_player2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/label_player1"
        app:layout_constraintTop_toBottomOf="@id/label_scoreboard" />

    <TextView
        android:id="@+id/textview_score1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/label_player1"
        app:layout_constraintStart_toStartOf="@id/label_player1"
        app:layout_constraintTop_toBottomOf="@id/label_player1" />

    <TextView
        android:id="@+id/textview_score2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/label_player2"
        app:layout_constraintStart_toStartOf="@id/label_player2"
        app:layout_constraintTop_toBottomOf="@id/label_player2" />

</androidx.constraintlayout.widget.ConstraintLayout>